--- a/android/app/src/main/res/layout/java_main_activity.xml
+++ b/android/app/src/main/res/layout/java_main_activity.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_margin="100dp"
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    android:background="#00000000"
+    android:padding="10dp"
+    android:gravity="center">
 
     <TextView
         android:id="@+id/android_tv"
@@ -11,4 +14,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-</LinearLayout>
+</FrameLayout>
